# domain-monitor

./: .gitignore  LICENSE  MANIFEST.in  README.md  build_exe.ps1  domain-monitor.spec  pyinstaller_entry.py  pyproject.toml  run.bat
.github/workflows/: ci.yml
src/domain_monitor/: __init__.py  __main__.py  app.py  cli.py
src/domain_monitor/static/: .gitkeep
src/domain_monitor/templates/: index.html
